software/ros2/src/log/build_2024-06-14_15-11-58/hardware_interface/stderr.log
  File "/home/darudecookie/Documents/V2-Robot-Arm/software/ros2/src/install/hardware_interface/lib/python3.12/site-packages/hardware_interface/Microcontroller_Interface_Node.py", line 6
    from v2_robot_arm_interfaces.msg import current_end_effector_information.msg, 
                                                                            ^
SyntaxError: invalid syntax

